// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner Component should render correctly with border-2 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-brand-100 nj-border-t-brand"
    data-testid="spinner"
    style="width: 20px; height: 20px; border-width: 2px;"
  />
</div>
`;

exports[`Spinner Component should render successfully with danger state 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-red-500 border-t-red-100"
    data-testid="spinner"
    style="width: 20px; height: 20px; border-width: 2px;"
  />
</div>
`;

exports[`Spinner Component should render successfully with success state 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-green-500 border-t-green-100"
    data-testid="spinner"
    style="width: 20px; height: 20px; border-width: 2px;"
  />
</div>
`;
